java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField10-hints.pass
Create field a in org.netbeans.test.java.hints.CreateField10
Create parameter a
Create local variable a
